--- a/death-statistics/tables/1-2-monthly-location/index.html
+++ b/death-statistics/tables/1-2-monthly-location/index.html
@@ -14,7 +14,7 @@ title: "Death statistics"
       <figure class="figure" id="table-">
         <table class="table">
           <caption class="table__caption">Monthly deaths by region (January - April 2019)</caption>
-          <tbody>
+          <thead>
             <tr class="table__header-row table__nowrap">
               <th scope="col"></th>
               <th scope="col">January 2019</th>
@@ -22,6 +22,9 @@ title: "Death statistics"
               <th scope="col">March 2019</th>
               <th scope="col">April 2019</th>
             </tr>
+          </thead>
+          <tbody>
+
             <tr>
               <td>ENGLAND, WALES AND ELSEWHERE 1,2</td>
               <td>53,910</td>
