--- a/death-statistics/tables/1-4-3-weekly-age-females/index.html
+++ b/death-statistics/tables/1-4-3-weekly-age-females/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Weekly female deaths by age group (January - May 2019)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr>
+      <!-- <caption class="table__caption">Weekly female deaths by age group (January - May 2019)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr></thead>
+      <tbody>
       <tr><td>4-Jan-19</td><td>15</td><td>10</td><td>87</td><td>506</td><td>774</td><td>1,488</td><td>2,881</td></tr>
       <tr><td>11-Jan-19</td><td>30</td><td>7</td><td>112</td><td>567</td><td>914</td><td>1,733</td><td>3,074</td></tr>
       <tr><td>18-Jan-19</td><td>20</td><td>15</td><td>108</td><td>542</td><td>873</td><td>1,577</td><td>2,834</td></tr>
