--- a/death-statistics/tables/2-3-marital-status-2017/index.html
+++ b/death-statistics/tables/2-3-marital-status-2017/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Deaths by marital status (2017)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Male</th><th scope="col">Female</th></tr>
+      <!-- <caption class="table__caption">Deaths by marital status (2017)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Male</th><th scope="col">Female</th></tr></thead>
+      <tbody>
       <tr><td>Total</td><td>262,678</td><td>270,575</td></tr>
       <tr><td>Single</td><td>36,250</td><td>22,774</td></tr>
       <tr><td>Married</td><td>131,633</td><td>68,358</td></tr>
