--- a/death-statistics/tables/2-4-age-105/index.html
+++ b/death-statistics/tables/2-4-age-105/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
     <table class="table">
-    <caption class="table__caption">Deaths over 105 (2015 - 2017)</caption>
-    <tbody><tr class="table__header-row table__nowrap"><th scope="col">Age</th><th scope="col">Sex</th><th scope="col">2015</th><th scope="col">2016</th><th scope="col">2017</th></tr>
+    <!-- <caption class="table__caption">Deaths over 105 (2015 - 2017)</caption> -->
+    <thead><tr class="table__header-row table__nowrap"><th scope="col">Age</th><th scope="col">Sex</th><th scope="col">2015</th><th scope="col">2016</th><th scope="col">2017</th></tr></thead>
+    <tbody>
     <tr><td>105</td><td>Male</td><td>21</td><td>28</td><td>27</td></tr>
     <tr><td></td><td>Female</td><td>174</td><td>164</td><td>193</td></tr>
     <tr><td></td><td></td><td></td><td></td><td></td></tr>
