--- a/death-statistics/tables/3-3-suicides-sex/index.html
+++ b/death-statistics/tables/3-3-suicides-sex/index.html
@@ -13,9 +13,10 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
 <table class="table">
-<caption class="table__caption">Yearly suicides by sex (1981 - 2016)</caption>
-<tbody><tr class="table__header-row table__nowrap"><th scope="col" class="align-center"></th><th scope="colgroup" colspan="2" class="align-center">Persons</th><th scope="colgroup" colspan="2" class="align-center">Males</th><th scope="colgroup" colspan="2" class="align-center">Females</th></tr>
-<tr class="table__header-row table__nowrap"><th scope="col">Year</th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th></tr>
+<!-- <caption class="table__caption">Yearly suicides by sex (1981 - 2016)</caption> -->
+<thead><tr class="table__header-row table__nowrap"><th scope="col" class="align-center"></th><th scope="colgroup" colspan="2" class="align-center">Persons</th><th scope="colgroup" colspan="2" class="align-center">Males</th><th scope="colgroup" colspan="2" class="align-center">Females</th></tr>
+<tr class="table__header-row table__nowrap"><th scope="col">Year</th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th></tr></thead>
+<tbody>
 <tr><td>1981</td><td>5,752</td><td>14.5</td><td>3,585</td><td>19.2</td><td>2,167</td><td>10.5</td></tr>
 <tr><td>1982</td><td>5,662</td><td>14.2</td><td>3,561</td><td>19.1</td><td>2,101</td><td>10.1</td></tr>
 <tr><td>1983</td><td>5,531</td><td>13.8</td><td>3,536</td><td>18.9</td><td>1,995</td><td>9.6</td></tr>
