--- a/death-statistics/tables/3-4-suicides-location/index.html
+++ b/death-statistics/tables/3-4-suicides-location/index.html
@@ -13,10 +13,11 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Yearly suicides by location (2014 - 2016)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col" class="align-center"></th><th scope="colgroup" colspan="2" class="align-center">2016</th><th scope="colgroup" colspan="2" class="align-center">2015</th><th scope="colgroup" colspan="2" class="align-center">2014</th></tr>
+      <!-- <caption class="table__caption">Yearly suicides by location (2014 - 2016)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col" class="align-center"></th><th scope="colgroup" colspan="2" class="align-center">2016</th><th scope="colgroup" colspan="2" class="align-center">2015</th><th scope="colgroup" colspan="2" class="align-center">2014</th></tr>
       <tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th><th scope="col">Deaths</th><th scope="col">Rate</th></tr>
-      <tr class="table__header-row table__nowrap"><th scope="col">Persons</th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th></tr>
+      <tr class="table__header-row table__nowrap"><th scope="col">Persons</th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th><th scope="col"></th></tr></thead>
+      <tbody
       <tr><td>North East</td><td>228</td><td>9.9</td><td>257</td><td>11.3</td><td>257</td><td>11.1</td></tr>
       <tr><td>North West</td><td>641</td><td>10.2</td><td>647</td><td>10.3</td><td>698</td><td>11.2</td></tr>
       <tr><td>Yorkshire and The Humber</td><td>493</td><td>10.5</td><td>489</td><td>10.4</td><td>453</td><td>9.7</td></tr>
