--- a/death-statistics/tables/3-5-excessive-winter-deaths/index.html
+++ b/death-statistics/tables/3-5-excessive-winter-deaths/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
   <table class="table">
-  <caption class="table__caption">Excessive winter deaths (1950-2018)</caption>
-  <tbody><tr class="table__header-row table__nowrap"><th scope="col">Winter season</th><th scope="col">Excess winter deaths</th><th scope="col">Five-year moving average</th></tr>
+  <thead><tr class="table__header-row table__nowrap"><th scope="col">Winter season</th><th scope="col">Excess winter deaths</th><th scope="col">Five-year moving average</th></tr></thead>
+  <!-- <caption class="table__caption">Excessive winter deaths (1950-2018)</caption> -->
+  <tbody>
   <tr><td>1950/1951</td><td>106,400</td><td></td></tr>
   <tr><td>1951/1952</td><td>44,950</td><td></td></tr>
   <tr><td>1952/1953</td><td>82,670</td><td>69,174</td></tr>
@@ -86,7 +87,7 @@ title: "Death statistics"
   </tbody></table><footer class="figure__footer">
   </footer>
   </figure>
-  
+
     </div>
   </div>
 </div>
