--- a/death-statistics/tables/1-4-1-weekly-age-all/index.html
+++ b/death-statistics/tables/1-4-1-weekly-age-all/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Weekly deaths by age group January - May 2019</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr>
+      <!-- <caption class="table__caption">Weekly deaths by age group January - May 2019</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr></thead>
+      <tbody>
       <tr><td>4-Jan-19</td><td>43</td><td>15</td><td>215</td><td>1,199</td><td>1,766</td><td>3,078</td><td>4,639</td></tr>
       <tr><td>11-Jan-19</td><td>50</td><td>20</td><td>280</td><td>1,419</td><td>2,179</td><td>3,590</td><td>5,071</td></tr>
       <tr><td>18-Jan-19</td><td>59</td><td>29</td><td>319</td><td>1,373</td><td>2,004</td><td>3,414</td><td>4,662</td></tr>
