--- a/death-statistics/tables/1-4-2-weekly-age-males/index.html
+++ b/death-statistics/tables/1-4-2-weekly-age-males/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
 <table class="table">
-<caption class="table__caption">Weekly male deaths by age group (January - May 2019)</caption>
-<tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr>
+<!-- <caption class="table__caption">Weekly male deaths by age group (January - May 2019)</caption> -->
+<thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Under 1 year</th><th scope="col">01-14</th><th scope="col">15-44</th><th scope="col">45-64</th><th scope="col">65-74</th><th scope="col">75-84</th><th scope="col">85+</th></tr></thead>
+<tbody>
 <tr><td>4-Jan-19</td><td>28</td><td>5</td><td>128</td><td>693</td><td>992</td><td>1,590</td><td>1,758</td></tr>
 <tr><td>11-Jan-19</td><td>20</td><td>13</td><td>168</td><td>852</td><td>1,265</td><td>1,857</td><td>1,997</td></tr>
 <tr><td>18-Jan-19</td><td>39</td><td>14</td><td>211</td><td>831</td><td>1,131</td><td>1,837</td><td>1,828</td></tr>
