--- a/death-statistics/tables/2-2-single-year-age/index.html
+++ b/death-statistics/tables/2-2-single-year-age/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Deaths by single year of age (2007 - 2017)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col">Age</th><th scope="col">2007</th><th scope="col">2008</th><th scope="col">2009</th><th scope="col">2010</th><th scope="col">2011</th><th scope="col">2012</th><th scope="col">2013</th><th scope="col">2014</th><th scope="col">2015</th><th scope="col">2016</th><th scope="col">2017</th></tr>
+      <!-- <caption class="table__caption">Deaths by single year of age (2007 - 2017)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col">Age</th><th scope="col">2007</th><th scope="col">2008</th><th scope="col">2009</th><th scope="col">2010</th><th scope="col">2011</th><th scope="col">2012</th><th scope="col">2013</th><th scope="col">2014</th><th scope="col">2015</th><th scope="col">2016</th><th scope="col">2017</th></tr></thead>
+      <tbody>
       <tr><td>0</td><td>2,113</td><td>2,123</td><td>2,067</td><td>1,915</td><td>2,049</td><td>1,912</td><td>1,741</td><td>1,646</td><td>1,752</td><td>1,654</td><td>1,664</td></tr>
       <tr><td>1</td><td>154</td><td>144</td><td>127</td><td>129</td><td>143</td><td>134</td><td>135</td><td>142</td><td>119</td><td>111</td><td>98</td></tr>
       <tr><td>2</td><td>104</td><td>70</td><td>73</td><td>77</td><td>81</td><td>74</td><td>74</td><td>72</td><td>67</td><td>64</td><td>58</td></tr>
