--- a/death-statistics/tables/2-6-homeless-deaths/index.html
+++ b/death-statistics/tables/2-6-homeless-deaths/index.html
@@ -12,25 +12,218 @@ title: "Death statistics"
     <div class="col col--md-two-thirds col--lg-two-thirds">
 
       <figure class="figure" id="table-">
-      <table class="table">
-      <caption class="table__caption">Monthly deaths of homeless people (2017-2013)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col">Month</th><th scope="colgroup" colspan="2" class="align-center">2017</th><th scope="colgroup" colspan="2" class="align-center">2016</th><th scope="colgroup" colspan="2" class="align-center">2015</th><th scope="colgroup" colspan="2" class="align-center">2014</th><th scope="colgroup" colspan="2" class="align-center">2013</th></tr>
-      <tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Identified</th><th scope="col">Estimated</th><th scope="col">Identified</th><th scope="col">Estimated</th><th scope="col">Identified</th><th scope="col">Estimated</th><th scope="col">Identified</th><th scope="col">Estimated</th><th scope="col">Identified</th><th scope="col">Estimated</th></tr>
-      <tr><td>Total for year</td><td>491</td><td>597</td><td>472</td><td>565</td><td>425</td><td>508</td><td>401</td><td>475</td><td>392</td><td>482</td></tr>
-      <tr><td>January</td><td>39</td><td>47</td><td>30</td><td>36</td><td>37</td><td>44</td><td>31</td><td>37</td><td>30</td><td>37</td></tr>
-      <tr><td>Febuary</td><td>46</td><td>56</td><td>41</td><td>49</td><td>38</td><td>45</td><td>45</td><td>53</td><td>41</td><td>50</td></tr>
-      <tr><td>March</td><td>38</td><td>46</td><td>39</td><td>47</td><td>33</td><td>39</td><td>48</td><td>57</td><td>41</td><td>50</td></tr>
-      <tr><td>April</td><td>37</td><td>45</td><td>42</td><td>50</td><td>40</td><td>48</td><td>27</td><td>32</td><td>30</td><td>37</td></tr>
-      <tr><td>May</td><td>45</td><td>55</td><td>32</td><td>38</td><td>26</td><td>31</td><td>23</td><td>27</td><td>34</td><td>42</td></tr>
-      <tr><td>June</td><td>43</td><td>52</td><td>51</td><td>61</td><td>31</td><td>37</td><td>32</td><td>38</td><td>24</td><td>30</td></tr>
-      <tr><td>July</td><td>36</td><td>44</td><td>31</td><td>37</td><td>27</td><td>32</td><td>27</td><td>32</td><td>28</td><td>34</td></tr>
-      <tr><td>August</td><td>59</td><td>72</td><td>33</td><td>40</td><td>39</td><td>47</td><td>27</td><td>32</td><td>32</td><td>39</td></tr>
-      <tr><td>September</td><td>30</td><td>36</td><td>50</td><td>60</td><td>46</td><td>55</td><td>39</td><td>46</td><td>33</td><td>41</td></tr>
-      <tr><td>October</td><td>41</td><td>50</td><td>28</td><td>34</td><td>38</td><td>45</td><td>25</td><td>30</td><td>26</td><td>32</td></tr>
-      <tr><td>November</td><td>34</td><td>41</td><td>54</td><td>65</td><td>36</td><td>43</td><td>37</td><td>44</td><td>30</td><td>37</td></tr>
-      <tr><td>December</td><td>43</td><td>52</td><td>41</td><td>49</td><td>34</td><td>41</td><td>40</td><td>47</td><td>43</td><td>53</td></tr>
-      </tbody></table><footer class="figure__footer">
-      </footer>
+        <table class="table">
+          <!-- <caption class="table__caption">Monthly deaths of homeless people (2017-2013)</caption> -->
+          <thead>
+            <tr class="table__header-row table__nowrap">
+              <th scope="col"></th>
+              <th scope="col" class="align-center">2017</th>
+              <th scope="col"></th>
+              <th scope="col"class="align-center">2016</th>
+              <th scope="col"></th>
+              <th scope="col" class="align-center">2015</th>
+              <th scope="col"></th>
+              <!-- <th scope="colgroup" colspan="2" class="align-center">2014</th>
+              <th scope="col"></th> -->
+            </tr>
+            <tr class="table__header-row table__nowrap">
+              <!-- <th scope="col"></th>
+              <th scope="col">Identified</th>
+              <th scope="col">Estimated</th>
+              <th scope="col">Identified</th>
+              <th scope="col">Estimated</th>
+              <th scope="col">Identified</th>
+              <th scope="col">Estimated</th>
+              <th scope="col" width="100">Identified</th>
+              <th scope="col" width="100">Estimated</th> -->
+              <!-- <th scope="col">Identified</th>
+              <th scope="col">Estimated</th> -->
+
+              <th scope="col">1 </th>
+              <th scope="col">2</th>
+              <th scope="col">3</th>
+              <th scope="col">4</th>
+              <th scope="col">5</th>
+              <th scope="col">6</th>
+              <th scope="col">7</th>
+              <!-- <th scope="col">8</th>
+              <th scope="col">9</th> -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Total for year</td>
+              <td>491</td>
+              <td>597</td>
+              <td>472</td>
+              <td>565</td>
+              <td>425</td>
+              <td>508</td>
+              <td>401</td>
+              <td>475</td>
+              <!-- <td>392</td>
+              <td>482</td> -->
+            </tr>
+            <tr>
+              <td>January</td>
+              <td>39</td>
+              <td>47</td>
+              <td>30</td>
+              <td>36</td>
+              <td>37</td>
+              <td>44</td>
+              <td>31</td>
+              <td>37</td>
+              <!-- <td>30</td>
+              <td>37</td> -->
+            </tr>
+            <tr>
+              <td>Febuary</td>
+              <td>46</td>
+              <td>56</td>
+              <td>41</td>
+              <td>49</td>
+              <td>38</td>
+              <td>45</td>
+              <td>45</td>
+              <td>53</td>
+              <!-- <td>41</td>
+              <td>50</td> -->
+            </tr>
+            <tr>
+              <td>March</td>
+              <td>38</td>
+              <td>46</td>
+              <td>39</td>
+              <td>47</td>
+              <td>33</td>
+              <td>39</td>
+              <td>48</td>
+              <td>57</td>
+              <!-- <td>41</td>
+              <td>50</td> -->
+            </tr>
+            <tr>
+              <td>April</td>
+              <td>37</td>
+              <td>45</td>
+              <td>42</td>
+              <td>50</td>
+              <td>40</td>
+              <td>48</td>
+              <td>27</td>
+              <td>32</td>
+              <!-- <td>30</td>
+              <td>37</td> -->
+            </tr>
+            <tr>
+              <td>May</td>
+              <td>45</td>
+              <td>55</td>
+              <td>32</td>
+              <td>38</td>
+              <td>26</td>
+              <td>31</td>
+              <td>23</td>
+              <td>27</td>
+              <!-- <td>34</td>
+              <td>42</td> -->
+            </tr>
+            <tr>
+              <td>June</td>
+              <td>43</td>
+              <td>52</td>
+              <td>51</td>
+              <td>61</td>
+              <td>31</td>
+              <td>37</td>
+              <td>32</td>
+              <td>38</td>
+              <!-- <td>24</td>
+              <td>30</td> -->
+            </tr>
+            <tr>
+              <td>July</td>
+              <td>36</td>
+              <td>44</td>
+              <td>31</td>
+              <td>37</td>
+              <td>27</td>
+              <td>32</td>
+              <td>27</td>
+              <td>32</td>
+              <!-- <td>28</td>
+              <td>34</td> -->
+            </tr>
+            <tr>
+              <td>August</td>
+              <td>59</td>
+              <td>72</td>
+              <td>33</td>
+              <td>40</td>
+              <td>39</td>
+              <td>47</td>
+              <td>27</td>
+              <td>32</td>
+              <!-- <td>32</td>
+              <td>39</td> -->
+            </tr>
+            <tr>
+              <td>September</td>
+              <td>30</td>
+              <td>36</td>
+              <td>50</td>
+              <td>60</td>
+              <td>46</td>
+              <td>55</td>
+              <td>39</td>
+              <td>46</td>
+              <!-- <td>33</td>
+              <td>41</td> -->
+            </tr>
+            <tr>
+              <td>October</td>
+              <td>41</td>
+              <td>50</td>
+              <td>28</td>
+              <td>34</td>
+              <td>38</td>
+              <td>45</td>
+              <td>25</td>
+              <td>30</td>
+              <!-- <td>26</td>
+              <td>32</td> -->
+            </tr>
+            <tr>
+              <td>November</td>
+              <td>34</td>
+              <td>41</td>
+              <td>54</td>
+              <td>65</td>
+              <td>36</td>
+              <td>43</td>
+              <td>37</td>
+              <td>44</td>
+              <!-- <td>30</td>
+              <td>37</td> -->
+            </tr>
+            <tr>
+              <td>December</td>
+              <td>43</td>
+              <td>52</td>
+              <td>41</td>
+              <td>49</td>
+              <td>34</td>
+              <td>41</td>
+              <td>40</td>
+              <td>47</td>
+              <!-- <td>43</td>
+              <td>53</td> -->
+            </tr>
+          </tbody>
+        </table>
+        <footer class="figure__footer">
+        </footer>
       </figure>
 
     </div>
