--- a/death-statistics/tables/4-2-local-authority-month/index.html
+++ b/death-statistics/tables/4-2-local-authority-month/index.html
@@ -13,9 +13,10 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Monthly deaths by Local Authority (January - April 2019)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">January 2019</th><th scope="col">February 2019</th><th scope="col">March 2019</th><th scope="col">April 2019</th></tr>
-      <tr><td></td><td></td><td></td><td></td><td></td></tr>
+      <!-- <caption class="table__caption">Monthly deaths by Local Authority (January - April 2019)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">January 2019</th><th scope="col">February 2019</th><th scope="col">March 2019</th><th scope="col">April 2019</th></tr>
+      <tr><td></td><td></td><td></td><td></td><td></td></tr></thead>
+      <tbody>
       <tr><td>ENGLAND, WALES AND ELSEWHERE</td><td>53,910</td><td>45,796</td><td>43,946</td><td>44,123</td></tr>
       <tr><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td>ENGLAND AND WALES</td><td>53,772</td><td>45,696</td><td>43,815</td><td>44,003</td></tr>
