--- a/death-statistics/tables/4-4-local-authority-homeless/index.html
+++ b/death-statistics/tables/4-4-local-authority-homeless/index.html
@@ -13,8 +13,9 @@ title: "Death statistics"
 
       <figure class="figure" id="table-">
       <table class="table">
-      <caption class="table__caption">Deaths of homeless people by Local Authority (2017)</caption>
-      <tbody><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Identified deaths</th><th scope="col">Estimated deaths</th><th scope="col">Estimated deaths per 100,000 total population</th><th scope="col">5 years combined</th></tr>
+      <!-- <caption class="table__caption">Deaths of homeless people by Local Authority (2017)</caption> -->
+      <thead><tr class="table__header-row table__nowrap"><th scope="col"></th><th scope="col">Identified deaths</th><th scope="col">Estimated deaths</th><th scope="col">Estimated deaths per 100,000 total population</th><th scope="col">5 years combined</th></tr></thead>
+      <tbody>
       <tr><td>England &amp; Wales</td><td>491</td><td>597</td><td>1</td><td>1.2</td></tr>
       <tr><td>England</td><td>480</td><td>584</td><td>1.4</td><td>1.3</td></tr>
       <tr><td>Wales</td><td>11</td><td>13</td><td>0.4</td><td>0.8</td></tr>
