Fix homelessness table headers and add prototype v2 to homepage

--- a/index.html
+++ b/index.html
@@ -9,23 +9,37 @@ footer: false
 title: "Find an answer alpha prototype"
 ---
 
+<style>
+  td {
+    text-align: left;
+  }
+
+  th {
+    text-align: left;
+  }
+
+</style>
+
 <div class="wrapper prototype">
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Find an answer alpha prototypes</h1>
-      <p>Latest versions of the prototype:<p/>
-        <a href = "/death-statistics">First prototype, just tables (v0.0.1)</a>
 
       <h2>Previously tested versions</h2>
-      <table style="width: 100%;">
+      <table>
         <tr>
           <th>Version</th>
           <th>Tested on</th>
-          <th>Changes</th>
+          <th style="width: 500px;">Changes</th>
         </tr>
         <tr>
-          <td>0.0.1</td>
-          <td>06 June 2019 (TBC)</td>
+          <td><a href="../death-statistics/v2/main">Version 2</td>
+          <td>6th June</td>
+          <td>Only 15% of questions could be answered by version 1. We have split the page into 4 sub topic pages, including a wider range of data.</td>
+        </tr>
+        <tr>
+          <td><a href="/death-statistics/v1">Version 1</td>
+          <td>24th May</td>
           <td></td>
         </tr>
       </table>
