--- a/death-statistics/tables/2-6-homeless-deaths/index.html
+++ b/death-statistics/tables/2-6-homeless-deaths/index.html
@@ -11,6 +11,7 @@ title: "Death statistics"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
 
+
       <figure class="figure" id="table-">
         <table class="table">
           <!-- <caption class="table__caption">Monthly deaths of homeless people (2017-2013)</caption> -->
@@ -23,33 +24,30 @@ title: "Death statistics"
               <th scope="col"></th>
               <th scope="col" class="align-center">2015</th>
               <th scope="col"></th>
-              <!-- <th scope="colgroup" colspan="2" class="align-center">2014</th>
-              <th scope="col"></th> -->
+              <th scope="colgroup" colspan="2" class="align-center">2014</th>
+              <th scope="col"></th>
+              <th scope="colgroup" colspan="2" class="align-center">2013</th>
+              <th scope="col"></th>
             </tr>
             <tr class="table__header-row table__nowrap">
-              <!-- <th scope="col"></th>
+              <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
               <th scope="col">Identified</th>
               <th scope="col">Estimated</th>
               <th scope="col">Identified</th>
               <th scope="col">Estimated</th>
               <th scope="col">Identified</th>
               <th scope="col">Estimated</th>
-              <th scope="col" width="100">Identified</th>
-              <th scope="col" width="100">Estimated</th> -->
-              <!-- <th scope="col">Identified</th>
-              <th scope="col">Estimated</th> -->
+              <th scope="col">Identified</th>
+              <th scope="col">Estimated</th>
+              <th scope="col">Identified</th>
+              <th scope="col">Estimated</th>
 
-              <th scope="col">1 </th>
-              <th scope="col">2</th>
-              <th scope="col">3</th>
-              <th scope="col">4</th>
-              <th scope="col">5</th>
-              <th scope="col">6</th>
-              <th scope="col">7</th>
-              <!-- <th scope="col">8</th>
-              <th scope="col">9</th> -->
             </tr>
           </thead>
+
+
+
+
           <tbody>
             <tr>
               <td>Total for year</td>
@@ -61,8 +59,8 @@ title: "Death statistics"
               <td>508</td>
               <td>401</td>
               <td>475</td>
-              <!-- <td>392</td>
-              <td>482</td> -->
+              <td>392</td>
+              <td>482</td>
             </tr>
             <tr>
               <td>January</td>
@@ -74,8 +72,8 @@ title: "Death statistics"
               <td>44</td>
               <td>31</td>
               <td>37</td>
-              <!-- <td>30</td>
-              <td>37</td> -->
+              <td>30</td>
+              <td>37</td>
             </tr>
             <tr>
               <td>Febuary</td>
@@ -87,8 +85,8 @@ title: "Death statistics"
               <td>45</td>
               <td>45</td>
               <td>53</td>
-              <!-- <td>41</td>
-              <td>50</td> -->
+              <td>41</td>
+              <td>50</td>
             </tr>
             <tr>
               <td>March</td>
@@ -100,8 +98,8 @@ title: "Death statistics"
               <td>39</td>
               <td>48</td>
               <td>57</td>
-              <!-- <td>41</td>
-              <td>50</td> -->
+              <td>41</td>
+              <td>50</td>
             </tr>
             <tr>
               <td>April</td>
@@ -113,8 +111,8 @@ title: "Death statistics"
               <td>48</td>
               <td>27</td>
               <td>32</td>
-              <!-- <td>30</td>
-              <td>37</td> -->
+              <td>30</td>
+              <td>37</td>
             </tr>
             <tr>
               <td>May</td>
@@ -126,8 +124,8 @@ title: "Death statistics"
               <td>31</td>
               <td>23</td>
               <td>27</td>
-              <!-- <td>34</td>
-              <td>42</td> -->
+              <td>34</td>
+              <td>42</td>
             </tr>
             <tr>
               <td>June</td>
@@ -139,8 +137,8 @@ title: "Death statistics"
               <td>37</td>
               <td>32</td>
               <td>38</td>
-              <!-- <td>24</td>
-              <td>30</td> -->
+              <td>24</td>
+              <td>30</td>
             </tr>
             <tr>
               <td>July</td>
@@ -152,8 +150,8 @@ title: "Death statistics"
               <td>32</td>
               <td>27</td>
               <td>32</td>
-              <!-- <td>28</td>
-              <td>34</td> -->
+              <td>28</td>
+              <td>34</td>
             </tr>
             <tr>
               <td>August</td>
@@ -165,8 +163,8 @@ title: "Death statistics"
               <td>47</td>
               <td>27</td>
               <td>32</td>
-              <!-- <td>32</td>
-              <td>39</td> -->
+              <td>32</td>
+              <td>39</td>
             </tr>
             <tr>
               <td>September</td>
@@ -178,8 +176,8 @@ title: "Death statistics"
               <td>55</td>
               <td>39</td>
               <td>46</td>
-              <!-- <td>33</td>
-              <td>41</td> -->
+              <td>33</td>
+              <td>41</td>
             </tr>
             <tr>
               <td>October</td>
@@ -191,8 +189,8 @@ title: "Death statistics"
               <td>45</td>
               <td>25</td>
               <td>30</td>
-              <!-- <td>26</td>
-              <td>32</td> -->
+              <td>26</td>
+              <td>32</td>
             </tr>
             <tr>
               <td>November</td>
@@ -204,8 +202,8 @@ title: "Death statistics"
               <td>43</td>
               <td>37</td>
               <td>44</td>
-              <!-- <td>30</td>
-              <td>37</td> -->
+              <td>30</td>
+              <td>37</td>
             </tr>
             <tr>
               <td>December</td>
@@ -217,8 +215,8 @@ title: "Death statistics"
               <td>41</td>
               <td>40</td>
               <td>47</td>
-              <!-- <td>43</td>
-              <td>53</td> -->
+              <td>43</td>
+              <td>53</td>
             </tr>
           </tbody>
         </table>
