Add anchor tags to cause of death page

--- a/death-statistics/v2/cause/index.html
+++ b/death-statistics/v2/cause/index.html
@@ -59,11 +59,11 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Leading causes of death (2017)</p>
+        <a href="#leading-causes"><p class="heading-normal">Leading causes of death (2017)</p></a>
       </div>
 
       <!-- Content -->
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="leading-causes">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
@@ -383,9 +383,9 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Deaths from cancers by sex (1994 - 2017)</p>
+        <a href="#cancers"><p class="heading-normal">Deaths from cancers by sex (1994 - 2017)</p></a>
       </div>
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="cancers">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
@@ -1376,11 +1376,11 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Deaths from select causes other than cancer by sex (1994 - 2017)</p>
+        <a href="#not-cancer"><p class="heading-normal">Deaths from select causes other than cancer by sex (1994 - 2017)</p></a>
       </div>
 
       <!-- Content -->
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="not-cancer">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
@@ -2192,9 +2192,9 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Yearly suicides by sex (1981 - 2016)</p>
+        <a href="#yearly-suicides"><p class="heading-normal">Yearly suicides by sex (1981 - 2016)</p></a>
       </div>
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="yearly-suicides">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
@@ -2566,9 +2566,9 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Yearly suicides by location (2014 - 2016)</p>
+        <a href="#suicide-location"><p class="heading-normal">Yearly suicides by location (2014 - 2016)</p></a>
       </div>
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="suicide-location">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
@@ -2631,9 +2631,9 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <p class="heading-normal">Excessive winter deaths (1950-2018)</p>
+        <a href="#winter>"<p class="heading-normal">Excessive winter deaths (1950-2018)</p></a>
       </div>
-      <div class="js-show-hide__content padding-left--0" style="overflow: auto;">
+      <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="winter">
         <div class="padding-bottom--6">
           <div class="wrapper">
             <div class="col-wrap">
