Fix winter anchor tag issue

--- a/death-statistics/v2/cause/index.html
+++ b/death-statistics/v2/cause/index.html
@@ -2631,7 +2631,7 @@ title: "Causes of deaths"
   <div class="js-show-hide padding-top--0">
     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
       <div class="js-show-hide__title padding-left--0">
-        <a href="#winter>"<p class="heading-normal">Excessive winter deaths (1950-2018)</p></a>
+        <a href="#winter"><p class="heading-normal">Excessive winter deaths (1950-2018)</p></a>
       </div>
       <div class="js-show-hide__content padding-left--0" style="overflow: auto;" id="winter">
         <div class="padding-bottom--6">
