Add JS for loop11

--- a/death-statistics/v2/location/index.html
+++ b/death-statistics/v2/location/index.html
@@ -1104,3 +1104,5 @@ title: "Locations of deaths"
   </div>
 
   </div>
+
+<script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
