--- a/death-statistics/v2/main/index.html
+++ b/death-statistics/v2/main/index.html
@@ -68,3 +68,5 @@ title: "Death statistics"
   </div>
 
 </div>
+
+<script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
