--- a/death-statistics/v2/population-characteristics/index.html
+++ b/death-statistics/v2/population-characteristics/index.html
@@ -738,3 +738,5 @@ title: "Death statistics broken down by population characteristics"
   </div>
 
 </div>
+
+<script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
