--- a/death-statistics/v2/cause/index.html
+++ b/death-statistics/v2/cause/index.html
@@ -2726,3 +2726,6 @@ title: "Causes of deaths"
   </div>
 
 </div>
+
+
+<script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
