--- a/death-statistics/v2/time/index.html
+++ b/death-statistics/v2/time/index.html
@@ -4088,3 +4088,5 @@ title: "Death statistics over different time periods "
   </div>
 
 </div>
+
+<script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
