Update previous version of the prototype links

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ title: "Find an answer alpha prototype"
           <th style="width: 500px;">Changes</th>
         </tr>
         <tr>
-          <td><a href="../death-statistics/v2/main">Version 2</td>
+          <td><a href="https://v2--find-an-answer-alpha.netlify.com/death-statistics/v2/main/">Version 2</td>
           <td>6th June</td>
           <td>Only 15% of questions could be answered by version 1. We have split the page into 4 sub topic pages, including a wider range of data.</td>
         </tr>
         <tr>
-          <td><a href="/death-statistics/v1">Version 1</td>
+          <td><a href="https://v2--find-an-answer-alpha.netlify.com/death-statistics/v1/">Version 1</td>
           <td>24th May</td>
           <td></td>
         </tr>
