Prototype v3 - includes sources to data and view all data button

--- a/death-statistics/cause/index.html
+++ b/death-statistics/cause/index.html
@@ -369,7 +369,7 @@ title: "Causes of deaths"
                   <footer class="figure__footer">
                   </footer>
                 </figure>
-
+                <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">Source: Deaths registered in England and Wales (series DR)</a></p>
               </div>
             </div>
           </div>
@@ -1360,14 +1360,12 @@ title: "Causes of deaths"
                   <footer class="figure__footer">
                   </footer>
                 </figure>
-
-
+                <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">Source: Deaths registered in England and Wales (series DR)</a></p>
 
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -2177,6 +2175,8 @@ title: "Causes of deaths"
                   <footer class="figure__footer">
                   </footer>
                 </figure>
+                <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">Source: Deaths registered in England and Wales (series DR)</a></p>
+
 
 
               </div>
@@ -2552,8 +2552,7 @@ title: "Causes of deaths"
                   <footer class="figure__footer">
                   </footer>
                 </figure>
-
-
+                <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/suicideinenglandandwales">Source: Suicide occurrences, England and Wales</a></p>
               </div>
             </div>
           </div>
@@ -2616,6 +2615,7 @@ title: "Causes of deaths"
                 </tbody></table><footer class="figure__footer">
                 </footer>
                 </figure>
+                <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/suicideinenglandandwales">Source: Suicide occurrences, England and Wales</a></p>
 
 
 
@@ -2715,6 +2715,7 @@ title: "Causes of deaths"
             </tbody></table><footer class="figure__footer">
             </footer>
             </figure>
+            <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/excesswintermortalityinenglandandwalesreferencetables">Source: Excess winter mortality in England and Wales</a></p>
 
 
               </div>
@@ -2724,6 +2725,8 @@ title: "Causes of deaths"
       </div>
     </div>
   </div>
+
+    <p class="margin-top--4"><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/causesofdeath/datalist">View all data</a></p>
 
 </div>
 
