--- a/death-statistics/index.html
+++ b/death-statistics/index.html
@@ -53,16 +53,16 @@ title: "Death statistics"
       <h1>Death statistics</h1>
       <!-- <p>Deaths broken down by age, sex, area and cause of death sourced from the deaths register.</p> -->
 
-    <h2><a href="../time">Time periods</a></h2>
+    <h2><a href="../death-statistics/time">Time periods</a></h2>
     <p style="margin-top: -20px;">Deaths broken down by yearly, monthly and weekly time periods.</p>
 
-    <h2><a href="../population-characteristics">Population characteristics</a></h2>
+    <h2><a href="../death-statistics/population-characteristics">Population characteristics</a></h2>
     <p style="margin-top: -20px;">Deaths broken down by age, sex, marital status and homelessness.</p>
 
-    <h2><a href="../cause">Causes of deaths</a></h2>
+    <h2><a href="../death-statistics/cause">Causes of deaths</a></h2>
     <p style="margin-top: -20px;">Including deaths from cancers, suicides and other top causes.</p>
 
-    <h2><a href="../location">Locations of deaths</a></h2>
+    <h2><a href="../death-statistics/location">Locations of deaths</a></h2>
     <p style="margin-top: -20px;">Deaths broken down by regions and Local Authory.</p>
     </div>
   </div>
