--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ title: "Find an answer alpha prototype"
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Find an answer alpha prototypes</h1>
 
+      <p><a href="../death-statistics">Latest version of the prototype</a></p>
+
       <h2>Previously tested versions</h2>
       <table>
         <tr>
