Fix breadcrumb links

--- a/death-statistics/cause/index.html
+++ b/death-statistics/cause/index.html
@@ -35,7 +35,7 @@ title: "Causes of deaths"
                   <a class="breadcrumb__link" href="#">Births, deaths and marriages</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="../main">Deaths</a>
+                  <a class="breadcrumb__link" href="../">Deaths</a>
                 </li>
                 <li class="breadcrumb__item">
                   Causes of deaths
