--- a/death-statistics/location/index.html
+++ b/death-statistics/location/index.html
@@ -36,7 +36,7 @@ title: "Locations of deaths"
                   <a class="breadcrumb__link" href="#">Births, deaths and marriages</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="../main">Deaths</a>
+                  <a class="breadcrumb__link" href="../">Deaths</a>
                 </li>
                 <li class="breadcrumb__item">
                   Locations of deaths
