--- a/death-statistics/population-characteristics/index.html
+++ b/death-statistics/population-characteristics/index.html
@@ -36,7 +36,7 @@ title: "Death statistics broken down by population characteristics"
                   <a class="breadcrumb__link" href="#">Births, deaths and marriages</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="../main">Deaths</a>
+                  <a class="breadcrumb__link" href="../">Deaths</a>
                 </li>
                 <li class="breadcrumb__item">
                   Death statistics broken down by population characteristics
