--- a/death-statistics/time/index.html
+++ b/death-statistics/time/index.html
@@ -36,7 +36,7 @@ title: "Death statistics over different time periods "
                   <a class="breadcrumb__link" href="#">Births, deaths and marriages</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="../main">Deaths</a>
+                  <a class="breadcrumb__link" href="../">Deaths</a>
                 </li>
                 <li class="breadcrumb__item">
                   Time periods
