--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ title: "Find an answer alpha prototype"
           <th style="width: 500px;">Changes</th>
         </tr>
         <tr>
+          <td><a href="https://v3--find-an-answer-alpha.netlify.com/death-statistics/cause">Version 3</td>
+          <td>TBC</td>
+          <td>Iterated to include next steps to finding the answer to your question if it is not covered by the page</td>
+        </tr>
+        <tr>
           <td><a href="https://v2--find-an-answer-alpha.netlify.com/death-statistics/v2/main">Version 2</td>
           <td>6th June</td>
           <td>Only 15% of questions could be answered by version 1. We have split the page into 4 sub topic pages, including a wider range of data.</td>
